--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,26 @@
 body
 {
+ text-align: center;
  font-family: "Tahoma";
  font-size: 18px;
  font-style: italic;
  background-color: aquamarine;
- color: black;
+ color: #333;
+ margin: 0;
+ padding: 0;
+}
+
+#container
+{
+    width: 70%;
+    padding: 1cm;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+    background-color: darkkhaki;
+}
+
+#container h1
+{
+    font-size: 20px;
 }
