--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,7 +4,7 @@ body
  font-family: "Tahoma";
  font-size: 18px;
  font-style: italic;
- background-color: aquamarine;
+ background-color: black;
  color: #333;
  margin: 0;
  padding: 0;
@@ -13,12 +13,20 @@ body
 
 #cabecera 
 {
-background: #33A;
+background: #1e1f24 ;
 box-shadow: 0px,2px,20px ,0px rgba(0,0,0,0.5);
 color: white;
 font-weight: bold;
 margin: 0;
-padding: 0.5em;
+padding: 0.5em ;
+}
+
+#cabecera #logo
+{
+    width: 25px;
+    height: 30px;
+    vertical-align: middle;
+    
 }
 
 #cabecera #tagline
@@ -42,4 +50,11 @@ padding: 0.5em;
 #container h1
 {
     font-size: 20px;
+}
+
+
+#post
+{
+    padding: 1em;
+    background: white;
 }
